--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.0",
+        "amphp/http-client": "^4.6",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.6",
         "sensio/framework-extra-bundle": "^6.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.1.*",
         "symfony/console": "*",
         "symfony/doctrine-messenger": "6.1.*",
@@ -23,6 +25,8 @@
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "6.1.*",
+        "symfony/http-foundation": "6.1.*",
+        "symfony/http-kernel": "6.1.*",
         "symfony/intl": "6.1.*",
         "symfony/mailer": "6.1.*",
         "symfony/mime": "6.1.*",
