--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+
+kernel:
+    resource: ../src/Kernel.php
+    type: attribute
+
+app_logout:
+    path: /logout
+    methods: GET
